<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.MapFragment" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_gravity="right">

            <EditText
                android:id="@+id/mapSearchBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/mapSearchBoxHint"
                android:ems="10" >
            </EditText>

            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchButton" 
                android:ems="5"/>

            <Button
                android:id="@+id/mapTypeChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewButton" 
        		android:ems="4"/>
        </LinearLayout>
    </fragment>

</LinearLayout>