<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LocationMessage" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tekst" />

        <SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView" 
             >

        </SearchView>
        
        <TextView
        android:id="@+id/searchResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search"
        android:layout_centerHorizontal="true"
        android:text="@string/wynik_szukania"/>
<!--         android:text="@string/hello_world" /> -->

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/number"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:gravity="bottom|center|center_vertical" >

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps_kropka" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/kropka_zielona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/kropka_zielona"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/kropka_czerwona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/kropka_czerwona"
                android:visibility="visible" />
        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/linearLayout1"
        android:text="@string/Ok" />

</RelativeLayout>